--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
 esp-alloc = { version = "0.8.0", features = ["defmt"] }
 esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32"] }
 # for more networking protocol support see https://crates.io/crates/edge-net
-bt-hci = { version = "0.2.1", features = [] }
+bt-hci = { version = "0.3.2", features = [] }
 critical-section = "1.2.0"
 embassy-executor = { version = "0.7.0", features = [
   "defmt",
@@ -57,11 +57,16 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
   "socket-udp",
 ] }
 static_cell = "2.1.1"
-trouble-host = { version = "0.1.0", features = ["gatt"] }
+trouble-host = { version = "0.2.4", features = ["gatt"] }
 picoserve = { version = "0.16.0", features = ["alloc", "defmt", "embassy"] }
 smart-leds = "0.4.0"
 esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", features = ["defmt", "esp32"] }
 embassy-sync = { version = "0.7.0", features = ["defmt"] }
+hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver", features = ["async"] }
+embedded-hal-async = "1.0.0"
+embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
+mfrc522 = "0.8.0"
+esp-hal-buzzer = { version = "0.1.0", features = ["defmt", "esp32"] }
 
 
 [profile.dev]
