--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ bt-hci = { version = "0.3.2", features = [] }
 critical-section = "1.2.0"
 embassy-executor = { version = "0.7.0", features = [
   "defmt",
-  "task-arena-size-20480",
+  "task-arena-size-24576",
 ] }
 embassy-time = { version = "0.4.0", features = ["defmt"] }
 esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32"] }
@@ -65,7 +65,7 @@ embassy-sync = { version = "0.7.0", features = ["defmt"] }
 hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver", features = ["async"] }
 embedded-hal-async = "1.0.0"
 embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
-mfrc522 = "0.8.0"
+esp-hal-mfrc522 = "0.2.1"
 esp-hal-buzzer = { version = "0.1.0", features = ["defmt", "esp32"] }
 
 
