--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,8 @@ ssd1306 = { version = "0.10.0", features = ["async"] }
 mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "1028ac24f83920fd95a5585a85ef943901ee63ac" }
 ratatui = { version = "0.30.0-alpha.5", default-features = false }
 embedded-hal = "1.0.0"
+embedded-graphics-framebuf = "0.5.0"
+tinybmp = "0.6.0"
 
 [profile.dev]
 # Rust debug is too slow.
